gen/diaj/dict/DiameterParser.java
// Generated from diaj/src/main/resources\Diameter.g4 by ANTLR 4.5.1
package diaj.dict;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class DiameterParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, ALPHA=34, DIGIT=35, INT=36, COMMENT=37, WS=38, STRING=39;
	public static final int
		RULE_rules = 0, RULE_simple_avp_def = 1, RULE_avp_code = 2, RULE_enum_id = 3, 
		RULE_avp_type = 4, RULE_command_def = 5, RULE_command_name = 6, RULE_diameter_name = 7, 
		RULE_header = 8, RULE_diameter_message = 9, RULE_command_id = 10, RULE_application_id = 11, 
		RULE_r_bit = 12, RULE_p_bit = 13, RULE_e_bit = 14, RULE_fixed = 15, RULE_required = 16, 
		RULE_optional = 17, RULE_qual = 18, RULE_min = 19, RULE_max = 20, RULE_avp_name = 21, 
		RULE_avp = 22, RULE_enum_def = 23, RULE_enum_item = 24, RULE_enum_item_name = 25, 
		RULE_avp_header = 26, RULE_avpcode = 27, RULE_vendor = 28, RULE_grouped_avp_def = 29;
	public static final String[] ruleNames = {
		"rules", "simple_avp_def", "avp_code", "enum_id", "avp_type", "command_def", 
		"command_name", "diameter_name", "header", "diameter_message", "command_id", 
		"application_id", "r_bit", "p_bit", "e_bit", "fixed", "required", "optional", 
		"qual", "min", "max", "avp_name", "avp", "enum_def", "enum_item", "enum_item_name", 
		"avp_header", "avpcode", "vendor", "grouped_avp_def"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'Integer32'", "'Integer64'", "'Unsigned32'", "'Unsigned64'", "'Float32'", 
		"'Float64'", "'Grouped'", "'Enumerated'", "'UTF8String'", "'OctetString'", 
		"'DiameterIdentity'", "'DiameterURI'", "'IPFilterRule'", "'Time'", "'Address'", 
		"'<'", "'>'", "'::='", "'-'", "'Diameter Header:'", "', REQ'", "', PXY'", 
		"', ERR'", "'{'", "'}'", "'['", "']'", "'*'", "'_'", "'AVP'", "'('", "')'", 
		"'<AVP Header:'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, "ALPHA", "DIGIT", 
		"INT", "COMMENT", "WS", "STRING"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Diameter.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public DiameterParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class RulesContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(DiameterParser.EOF, 0); }
		public List<Command_defContext> command_def() {
			return getRuleContexts(Command_defContext.class);
		}
		public Command_defContext command_def(int i) {
			return getRuleContext(Command_defContext.class,i);
		}
		public List<Simple_avp_defContext> simple_avp_def() {
			return getRuleContexts(Simple_avp_defContext.class);
		}
		public Simple_avp_defContext simple_avp_def(int i) {
			return getRuleContext(Simple_avp_defContext.class,i);
		}
		public List<Grouped_avp_defContext> grouped_avp_def() {
			return getRuleContexts(Grouped_avp_defContext.class);
		}
		public Grouped_avp_defContext grouped_avp_def(int i) {
			return getRuleContext(Grouped_avp_defContext.class,i);
		}
		public List<Enum_defContext> enum_def() {
			return getRuleContexts(Enum_defContext.class);
		}
		public Enum_defContext enum_def(int i) {
			return getRuleContext(Enum_defContext.class,i);
		}
		public RulesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rules; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DiameterListener ) ((DiameterListener)listener).enterRules(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DiameterListener ) ((DiameterListener)listener).exitRules(this);
		}
	}

	public final RulesContext rules() throws RecognitionException {
		RulesContext _localctx = new RulesContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_rules);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__15 || _la==ALPHA) {
				{
				setState(64);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(60);
					command_def();
					}
					break;
				case 2:
					{
					setState(61);
					simple_avp_def();
					}
					break;
				case 3:
					{
					setState(62);
					grouped_avp_def();
					}
					break;
				case 4:
					{
					setState(63);
					enum_def();
					}
					break;
				}
				}
				setState(68);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(69);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Simple_avp_defContext extends ParserRuleContext {
		public Diameter_nameContext diameter_name() {
			return getRuleContext(Diameter_nameContext.class,0);
		}
		public Avp_codeContext avp_code() {
			return getRuleContext(Avp_codeContext.class,0);
		}
		public Avp_typeContext avp_type() {
			return getRuleContext(Avp_typeContext.class,0);
		}
		public Simple_avp_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simple_avp_def; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DiameterListener ) ((DiameterListener)listener).enterSimple_avp_def(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DiameterListener ) ((DiameterListener)listener).exitSimple_avp_def(this);
		}
	}

	public final Simple_avp_defContext simple_avp_def() throws RecognitionException {
		Simple_avp_defContext _localctx = new Simple_avp_defContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_simple_avp_def);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			diameter_name();
			setState(72);
			avp_code();
			setState(73);
			avp_type();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Avp_codeContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(DiameterParser.INT, 0); }
		public TerminalNode DIGIT() { return getToken(DiameterParser.DIGIT, 0); }
		public Avp_codeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_avp_code; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DiameterListener ) ((DiameterListener)listener).enterAvp_code(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DiameterListener ) ((DiameterListener)listener).exitAvp_code(this);
		}
	}

	public final Avp_codeContext avp_code() throws RecognitionException {
		Avp_codeContext _localctx = new Avp_codeContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_avp_code);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			_la = _input.LA(1);
			if ( !(_la==DIGIT || _la==INT) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Enum_idContext extends ParserRuleContext {
		public TerminalNode DIGIT() { return getToken(DiameterParser.DIGIT, 0); }
		public TerminalNode INT() { return getToken(DiameterParser.INT, 0); }
		public Enum_idContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_enum_id; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DiameterListener ) ((DiameterListener)listener).enterEnum_id(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DiameterListener ) ((DiameterListener)listener).exitEnum_id(this);
		}
	}

	public final Enum_idContext enum_id() throws RecognitionException {
		Enum_idContext _localctx = new Enum_idContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_enum_id);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			_la = _input.LA(1);
			if ( !(_la==DIGIT || _la==INT) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Avp_typeContext extends ParserRuleContext {
		public Avp_typeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_avp_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DiameterListener ) ((DiameterListener)listener).enterAvp_type(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DiameterListener ) ((DiameterListener)listener).exitAvp_type(this);
		}
	}

	public final Avp_typeContext avp_type() throws RecognitionException {
		Avp_typeContext _localctx = new Avp_typeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_avp_type);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << T__2) | (1L << T__3) | (1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << T__11) | (1L << T__12) | (1L << T__13) | (1L << T__14))) != 0)) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Command_defContext extends ParserRuleContext {
		public Command_nameContext command_name() {
			return getRuleContext(Command_nameContext.class,0);
		}
		public Diameter_messageContext diameter_message() {
			return getRuleContext(Diameter_messageContext.class,0);
		}
		public Command_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_command_def; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DiameterListener ) ((DiameterListener)listener).enterCommand_def(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DiameterListener ) ((DiameterListener)listener).exitCommand_def(this);
		}
	}

	public final Command_defContext command_def() throws RecognitionException {
		Command_defContext _localctx = new Command_defContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_command_def);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			match(T__15);
			setState(82);
			command_name();
			setState(83);
			match(T__16);
			setState(84);
			match(T__17);
			setState(85);
			diameter_message();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Command_nameContext extends ParserRuleContext {
		public Diameter_nameContext diameter_name() {
			return getRuleContext(Diameter_nameContext.class,0);
		}
		public Command_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_command_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DiameterListener ) ((DiameterListener)listener).enterCommand_name(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DiameterListener ) ((DiameterListener)listener).exitCommand_name(this);
		}
	}

	public final Command_nameContext command_name() throws RecognitionException {
		Command_nameContext _localctx = new Command_nameContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_command_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			diameter_name();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Diameter_nameContext extends ParserRuleContext {
		public List<TerminalNode> ALPHA() { return getTokens(DiameterParser.ALPHA); }
		public TerminalNode ALPHA(int i) {
			return getToken(DiameterParser.ALPHA, i);
		}
		public List<TerminalNode> DIGIT() { return getTokens(DiameterParser.DIGIT); }
		public TerminalNode DIGIT(int i) {
			return getToken(DiameterParser.DIGIT, i);
		}
		public Diameter_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_diameter_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DiameterListener ) ((DiameterListener)listener).enterDiameter_name(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DiameterListener ) ((DiameterListener)listener).exitDiameter_name(this);
		}
	}

	public final Diameter_nameContext diameter_name() throws RecognitionException {
		Diameter_nameContext _localctx = new Diameter_nameContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_diameter_name);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			match(ALPHA);
			setState(93);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(90);
					_la = _input.LA(1);
					if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__18) | (1L << ALPHA) | (1L << DIGIT))) != 0)) ) {
					_errHandler.recoverInline(this);
					} else {
						consume();
					}
					}
					} 
				}
				setState(95);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HeaderContext extends ParserRuleContext {
		public Command_idContext command_id() {
			return getRuleContext(Command_idContext.class,0);
		}
		public List<R_bitContext> r_bit() {
			return getRuleContexts(R_bitContext.class);
		}
		public R_bitContext r_bit(int i) {
			return getRuleContext(R_bitContext.class,i);
		}
		public List<P_bitContext> p_bit() {
			return getRuleContexts(P_bitContext.class);
		}
		public P_bitContext p_bit(int i) {
			return getRuleContext(P_bitContext.class,i);
		}
		public List<E_bitContext> e_bit() {
			return getRuleContexts(E_bitContext.class);
		}
		public E_bitContext e_bit(int i) {
			return getRuleContext(E_bitContext.class,i);
		}
		public List<Application_idContext> application_id() {
			return getRuleContexts(Application_idContext.class);
		}
		public Application_idContext application_id(int i) {
			return getRuleContext(Application_idContext.class,i);
		}
		public HeaderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_header; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DiameterListener ) ((DiameterListener)listener).enterHeader(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DiameterListener ) ((DiameterListener)listener).exitHeader(this);
		}
	}

	public final HeaderContext header() throws RecognitionException {
		HeaderContext _localctx = new HeaderContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_header);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			match(T__15);
			setState(97);
			match(T__19);
			setState(98);
			command_id();
			setState(102);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__20) {
				{
				{
				setState(99);
				r_bit();
				}
				}
				setState(104);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(108);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__21) {
				{
				{
				setState(105);
				p_bit();
				}
				}
				setState(110);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(114);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__22) {
				{
				{
				setState(111);
				e_bit();
				}
				}
				setState(116);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(120);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==INT) {
				{
				{
				setState(117);
				application_id();
				}
				}
				setState(122);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(123);
			match(T__16);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Diameter_messageContext extends ParserRuleContext {
		public HeaderContext header() {
			return getRuleContext(HeaderContext.class,0);
		}
		public List<FixedContext> fixed() {
			return getRuleContexts(FixedContext.class);
		}
		public FixedContext fixed(int i) {
			return getRuleContext(FixedContext.class,i);
		}
		public List<RequiredContext> required() {
			return getRuleContexts(RequiredContext.class);
		}
		public RequiredContext required(int i) {
			return getRuleContext(RequiredContext.class,i);
		}
		public List<OptionalContext> optional() {
			return getRuleContexts(OptionalContext.class);
		}
		public OptionalContext optional(int i) {
			return getRuleContext(OptionalContext.class,i);
		}
		public Diameter_messageContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_diameter_message; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DiameterListener ) ((DiameterListener)listener).enterDiameter_message(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DiameterListener ) ((DiameterListener)listener).exitDiameter_message(this);
		}
	}

	public final Diameter_messageContext diameter_message() throws RecognitionException {
		Diameter_messageContext _localctx = new Diameter_messageContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_diameter_message);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			header();
			setState(129);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(126);
					fixed();
					}
					} 
				}
				setState(131);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			}
			setState(135);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(132);
					required();
					}
					} 
				}
				setState(137);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			}
			setState(141);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__25) | (1L << T__27) | (1L << DIGIT))) != 0)) {
				{
				{
				setState(138);
				optional();
				}
				}
				setState(143);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Command_idContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(DiameterParser.INT, 0); }
		public Command_idContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_command_id; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DiameterListener ) ((DiameterListener)listener).enterCommand_id(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DiameterListener ) ((DiameterListener)listener).exitCommand_id(this);
		}
	}

	public final Command_idContext command_id() throws RecognitionException {
		Command_idContext _localctx = new Command_idContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_command_id);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(144);
			match(INT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Application_idContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(DiameterParser.INT, 0); }
		public Application_idContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_application_id; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DiameterListener ) ((DiameterListener)listener).enterApplication_id(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DiameterListener ) ((DiameterListener)listener).exitApplication_id(this);
		}
	}

	public final Application_idContext application_id() throws RecognitionException {
		Application_idContext _localctx = new Application_idContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_application_id);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(146);
			match(INT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class R_bitContext extends ParserRuleContext {
		public R_bitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_r_bit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DiameterListener ) ((DiameterListener)listener).enterR_bit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DiameterListener ) ((DiameterListener)listener).exitR_bit(this);
		}
	}

	public final R_bitContext r_bit() throws RecognitionException {
		R_bitContext _localctx = new R_bitContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_r_bit);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(148);
			match(T__20);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class P_bitContext extends ParserRuleContext {
		public P_bitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_p_bit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DiameterListener ) ((DiameterListener)listener).enterP_bit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DiameterListener ) ((DiameterListener)listener).exitP_bit(this);
		}
	}

	public final P_bitContext p_bit() throws RecognitionException {
		P_bitContext _localctx = new P_bitContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_p_bit);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(150);
			match(T__21);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class E_bitContext extends ParserRuleContext {
		public E_bitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_e_bit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DiameterListener ) ((DiameterListener)listener).enterE_bit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DiameterListener ) ((DiameterListener)listener).exitE_bit(this);
		}
	}

	public final E_bitContext e_bit() throws RecognitionException {
		E_bitContext _localctx = new E_bitContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_e_bit);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(152);
			match(T__22);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FixedContext extends ParserRuleContext {
		public Avp_nameContext avp_name() {
			return getRuleContext(Avp_nameContext.class,0);
		}
		public List<QualContext> qual() {
			return getRuleContexts(QualContext.class);
		}
		public QualContext qual(int i) {
			return getRuleContext(QualContext.class,i);
		}
		public FixedContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fixed; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DiameterListener ) ((DiameterListener)listener).enterFixed(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DiameterListener ) ((DiameterListener)listener).exitFixed(this);
		}
	}
